--- a/TimeReg/app/src/main/res/values/strings.xml
+++ b/TimeReg/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_save">Gem</string>
     <string name="action_delete">Slet</string>
     <string name="submit">Send uge</string>
+    <string name="title_activity_info">Mine Oplysninger</string>
 </resources>
